--- a/Web/CounterPicker.Web/Views/Home/Hero.cshtml
+++ b/Web/CounterPicker.Web/Views/Home/Hero.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Champions</h2>
 
-<script src="~/Scripts/jquery-1.10.2.js"></script>
+@*<script src="~/Scripts/jquery-1.10.2.js"></script>
 <script>
     debugger;
     var champion;
@@ -59,6 +59,6 @@
         tbl.appendChild(tbdy);
         body.appendChild(tbl)
     })()
-</script>
+</script>*@
 
 
